# bevy-flake-template

./: .gitignore  Cargo.nix  Cargo.toml  README.md  build.rs  flake.nix  index.html  main.scss
.cargo/: config
.github/workflows/: build.yml  deploy-pages.yml  main.yml
src/: main.rs
