[package]
name = "bevy-flake-template"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.pacakge."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12", features = [ "wayland" ] }

[[bin]]
name = "client"
path = "src/client/bin/main.rs"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"
